# QT-qml-widget-projects

Realtime packet RSD/: CMakeLists.txt  Main.qml  PacketView.qml  circularbuffer.h  filelogger.cpp  filelogger.h  main.cpp  packetcontroller.cpp  packetcontroller.h  packetreceiver.cpp  packetreceiver.h  telemetrymodel.cpp  telemetrymodel.h
calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
camera/: CMakeLists.txt  camera.cpp  camera.h  imagesettings.h  main.cpp  metadatadialog.cpp  metadatadialog.h  videosettings.cpp  videosettings.h
